# llm-evals

./: .gitignore  DESIGN.md  README.md  pyproject.toml
examples/: mc_questions.jsonl  mc_thinking_eval.yaml
llm_evals/: cli.py  client.py  config.py  data.py  prompt.py  runner.py  scorers.py  types.py
tests/: test_client.py  test_config.py  test_data.py  test_prompt.py  test_runner.py  test_scorers.py  test_types.py
